Fix search+filter widget collapse behavior

--- a/lynx/static/lynx/css/output.css
+++ b/lynx/static/lynx/css/output.css
@@ -4152,6 +4152,10 @@ details.collapse summary::-webkit-details-marker {
   border-radius: 0.5rem;
 }
 
+.border {
+  border-width: 1px;
+}
+
 .border-0 {
   border-width: 0px;
 }
